--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "nuxt": "^3.15.4",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@nuxt/icon": "^1.10.3"
   }
 }
