--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
+    "@nuxt/content": "^3.2.2",
     "@nuxtjs/tailwindcss": "^6.13.1",
     "nuxt": "^3.15.4",
     "vue": "latest",
