--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
     "@nuxt/content": "^3.2.2",
+    "@nuxtjs/apollo": "^4.0.1-rc.5",
     "@nuxtjs/tailwindcss": "^6.13.1",
     "nuxt": "^3.15.4",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
-    "@nuxt/icon": "^1.10.3"
+    "@nuxt/icon": "^1.10.3",
+    "@tailwindcss/typography": "^0.5.16"
   }
 }
